k8s/apps/nullboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nullboard
  labels:
    app: nullboard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nullboard
  template:
    metadata:
      labels:
        app: nullboard
    spec:
      containers:
        - name: nullboard
          image: git.xgabrielmorales.com/xgabrielmorales/nullboard:0.0.1@sha256:750c6b19f7d18d55707cc9fd03896db62a300c026ffe2780ba8a5d8a796906ae
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 48Mi
            limits:
              memory: 128Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nullboard-data
