k8s/apps/nullboard/nullboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nullboard
  labels:
    app: nullboard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nullboard
  template:
    metadata:
      labels:
        app: nullboard
    spec:
      containers:
        - name: nullboard
          image: git.xgabrielmorales.com/xgabrielmorales/nullboard:0.0.3@sha256:d82d916460263252921897ff6561026752decc4e5547237e5e17cac6c1ad009a
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 48Mi
            limits:
              memory: 128Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nullboard-data
