k8s/apps/nullboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nullboard
spec:
  selector:
    app: nullboard
  ports:
    - port: 8080
      targetPort: 8080
