k8s/apps/nullboard/nullboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nullboard
spec:
  ingressClassName: traefik
  rules:
    - host: board.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nullboard
                port:
                  number: 8080
